# researcher

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
.github/workflows/: huggingface.yml  rag-evaluation.yml
config/: model_config.py
faiss_indexes/index_2410_02536_pdf.bin/: index.faiss  index.pkl
faiss_indexes/index_pbm_1_pdf.bin/: index.faiss  index.pkl
faiss_indexes/index_uploaded_pdf.bin/: index.faiss  index.pkl
faiss_indexes/latest_index.bin/: index.pkl
notebooks/: vector_store.ipynb
researcher/core/: app.py  main.py
researcher/core/config/: search_config.py
researcher/core/routers/: document_routes.py
researcher/core/utils/: model_factory.py  rag_pipeline.py  search_utils.py  vector_store.py
researcher/testing/: data_preparation.py  experiment_setup.py  synthetic_data.py
routers/: document_routes.py
scripts/: prepare_test_data.py
static/: styles.css
tests/: conftest.py  pytest.ini
tests/config/: test_config.py
tests/evaluation/: ragas_evaluator.py
tests/test_data/qa_pairs/: 1302.3560v1_qa.json
tests/test_evaluation/: test_experiments.py
tests/test_models/: test_local_inference.py
utils/: model_factory.py  rag_pipeline.py  search_utils.py  text_processing.py  vector_store.py
